# Ecobot-Dashboard

./: .gitignore  README.md  UPD_README.md
trash-sorting-dashboard/dashboard/: .env  index.js  package-lock.json  package.json
trash-sorting-dashboard/dashboard/public/: index.html
trash-sorting-dashboard/publisher/: CMakeLists.txt
trash-sorting-dashboard/publisher/src/: main.cpp
